--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,17 @@
 {
-  "users list" : "Users list"
+  "add address": "Ajouter address",
+  "add user": "Add user",
+  "address": "Address",
+  "delete address": "Delete addresse",
+  "email": "Email",
+  "firstname": "Firstname",
+  "lastname": "Lastname",
+  "non-compliance email": "Non-compliance email",
+  "required firstname": "Required firstname",
+	"required lastname": "Required lastname",
+  "required password": "Required password",
+  "required street": "Required street",
+  "password": "Password",
+  "password min 8 chars": "Password must hab minimum 8 chars",
+  "users list": "Users list"
 }
