--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,17 +2,21 @@
   "add address": "Ajouter address",
   "add user": "Add user",
   "address": "Address",
+  "Unauthorized Access": "Unauthorized Access",
   "delete address": "Delete addresse",
   "email": "Email",
+  "error": "Error",
   "firstname": "Firstname",
+  "Http failure response for (unknown url): 0 Unknown Error": "Http failure response for (unknown url): 0 Unknown Error",
   "lastname": "Lastname",
   "logout": "Logout",
   "non-compliance email": "Non-compliance email",
   "required firstname": "Required firstname",
-	"required lastname": "Required lastname",
+  "required lastname": "Required lastname",
   "required password": "Required password",
   "required street": "Required street",
   "password": "Password",
   "password min 8 chars": "Password must hab minimum 8 chars",
+  "send":"Send",
   "users list": "Users list"
 }
