--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,6 +11,7 @@
   "lastname": "Lastname",
   "logout": "Logout",
   "non-compliance email": "Non-compliance email",
+  "required birthday": "Required birtday",
   "required firstname": "Required firstname",
   "required lastname": "Required lastname",
   "required password": "Required password",
