--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,8 @@
   "add address": "Ajouter address",
   "add user": "Add user",
   "address": "Address",
+  "City": "City",
+  "Country":"Country",
   "Unauthorized Access": "Unauthorized Access",
   "delete address": "Delete addresse",
   "email": "Email",
@@ -18,6 +20,7 @@
   "required street": "Required street",
   "password": "Password",
   "password min 8 chars": "Password must hab minimum 8 chars",
-  "send":"Send",
+  "send": "Send",
+  "Street": "Street",
   "users list": "Users list"
 }
